--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,14 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>spring_Security</artifactId>
+	<artifactId>security_jwt</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring_Security</name>
+	<name>security_jwt</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
 		<java.version>17</java.version>
+		<jsonwebtoken.version>0.12.3</jsonwebtoken.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -45,6 +46,19 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${jsonwebtoken.version}</version>
 		</dependency>
 	</dependencies>
 
