--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=true
+
+jwt.token.secret=jwtappdemo
